include/Win32/Physics.NGDImport.hpp

//-- type declarations -------------------------------------------------------
typedef float dFloat;
typedef float *PdFloat;
typedef unsigned unsigned_int;
typedef void * PNewtonBody;
typedef void * PNewtonWorld;
typedef void * PNewtonCollision;
typedef void __cdecl (*NewtonBodyDestructor)(const void * Body);
typedef void __cdecl (*NewtonApplyForceAndTorque)(const void * Body, float timestep, int threadIndex);
typedef void __cdecl (*NewtonSetTransform)(const void * Body, const PdFloat matrix, int threadIndex);
//-- var, const, procedure ---------------------------------------------------
#define NewtonDLL L"newton32.dll"
extern "C" void __cdecl NewtonBodySetMatrix(const void * Body, const PdFloat matrix);
extern "C" void __cdecl NewtonBodySetMatrixRecursive(const void * Body, const PdFloat matrix);
extern "C" void __cdecl NewtonBodySetMassMatrix(const void * Body, float mass, float Ixx, float Iyy, float Izz);
extern "C" void __cdecl NewtonBodySetMaterialGroupID(const void * Body, int id);
extern "C" void __cdecl NewtonBodySetContinuousCollisionMode(const void * Body, int state);
extern "C" void __cdecl NewtonBodySetJointRecursiveCollision(const void * Body, unsigned state);
extern "C" void __cdecl NewtonBodySetOmega(const void * Body, const PdFloat omega);
extern "C" void __cdecl NewtonBodySetVelocity(const void * Body, const PdFloat velocity);
extern "C" void __cdecl NewtonBodySetForce(const void * Body, const PdFloat Force);
extern "C" void __cdecl NewtonBodySetTorque(const void * Body, const PdFloat torque);
extern "C" void __cdecl NewtonBodySetCentreOfMass(const void * Body, const PdFloat com);
extern "C" void __cdecl NewtonBodySetLinearDamping(const void * Body, float linearDamp);
extern "C" void __cdecl NewtonBodySetAngularDamping(const void * Body, const PdFloat angularDamp);
extern "C" void __cdecl NewtonBodySetUserData(const void * Body, void * userData);
extern "C" void __cdecl NewtonBodySetCollision(const void * Body, const void * collision);
extern "C" int __cdecl NewtonBodyGetSleepState(const void * Body);
extern "C" int __cdecl NewtonBodyGetAutoSleep(const void * Body);
extern "C" void __cdecl NewtonBodySetAutoSleep(const void * Body, int state);
extern "C" int __cdecl NewtonBodyGetFreezeState(const void * Body);
extern "C" void __cdecl NewtonBodySetFreezeState(const void * Body, int state);
extern "C" void __cdecl NewtonBodySetDestructorCallback(const void * Body, NewtonBodyDestructor callback);
extern "C" void __cdecl NewtonBodySetTransformCallback(const void * Body, NewtonSetTransform callback);
extern "C" NewtonSetTransform __cdecl NewtonBodyGetTransformCallback(const void * Body);
extern "C" void __cdecl NewtonBodySetForceAndTorqueCallback(const void * Body, NewtonApplyForceAndTorque callback);
extern "C" NewtonApplyForceAndTorque __cdecl NewtonBodyGetForceAndTorqueCallback(const void * Body);
extern "C" void * __cdecl NewtonBodyGetUserData(const void * Body);
extern "C" void * __cdecl NewtonBodyGetWorld(const void * Body);
extern "C" void * __cdecl NewtonBodyGetCollision(const void * Body);
extern "C" int __cdecl NewtonBodyGetMaterialGroupID(const void * Body);
extern "C" int __cdecl NewtonBodyGetContinuousCollisionMode(const void * Body);
extern "C" int __cdecl NewtonBodyGetJointRecursiveCollision(const void * Body);
extern "C" void __cdecl NewtonBodyGetMatrix(const void * Body, PdFloat matrix);
extern "C" void __cdecl NewtonBodyGetRotation(const void * Body, PdFloat rotation);
extern "C" void __cdecl NewtonBodyGetMassMatrix(const void * Body, PdFloat mass, PdFloat Ixx, PdFloat Iyy, PdFloat Izz);
extern "C" void __cdecl NewtonBodyGetInvMass(const void * Body, PdFloat invMass, PdFloat invIxx, PdFloat invIyy, PdFloat invIzz);
extern "C" void __cdecl NewtonBodyGetOmega(const void * Body, PdFloat vector);
extern "C" void __cdecl NewtonBodyGetVelocity(const void * Body, PdFloat vector);
extern "C" void __cdecl NewtonBodyGetForce(const void * Body, PdFloat vector);
extern "C" void __cdecl NewtonBodyGetTorque(const void * Body, PdFloat vector);
extern "C" void __cdecl NewtonBodyGetForceAcc(const void * Body, PdFloat vector);
extern "C" void __cdecl NewtonBodyGetTorqueAcc(const void * Body, PdFloat vector);
extern "C" void __cdecl NewtonBodyGetCentreOfMass(const void * Body, PdFloat com);
extern "C" float __cdecl NewtonBodyGetLinearDamping(const void * Body);
extern "C" void __cdecl NewtonBodyGetAngularDamping(const void * Body, PdFloat vector);
extern "C" void __cdecl NewtonBodyGetAABB(const void * Body, PdFloat p0, PdFloat p1);
extern "C" void __cdecl NewtonBodyGetFreezeTreshold(const void * Body, PdFloat freezeSpeed2, PdFloat freezeOmega2);